fix(styles): set default max-height of action menus to prevent excessive overflow (#2081)

--- a/packages/styles/action-menu.css
+++ b/packages/styles/action-menu.css
@@ -14,7 +14,7 @@
   border-radius: 8px;
   width: var(--action-menu-width);
   min-width: var(--action-menu-min-width, 10rem);
-  max-height: var(--action-menu-height);
+  max-height: var(--action-menu-max-height, 80vh);
   box-shadow: var(--drop-shadow-overlay);
   overflow-y: auto;
 }
